--- a/style.css
+++ b/style.css
@@ -5,28 +5,58 @@ body {
     background-color: #f9f9f9;
     color: #333;
 }
-
 header {
-    background-color: #bf1363;
-    padding: 15px;
-    text-align: center;
+    background-color: #FFFFFF;
+    padding: 15px 30px;
+    border-bottom: 1px solid black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+
+    display: flex;
+    align-items: center;
+    justify-content: center; /* 전체 컨텐츠를 중앙에 정렬 */
+    position: fixed;
 }
 
-header nav a {
-    color: white;
+.logo {
+    position: absolute;   /* 왼쪽 상단 고정 */
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.logo img {
+    height: 70px;
+    object-fit: contain;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar a {
+    color: #000000;
     text-decoration: none;
-    margin: 0 15px;
+    margin: 0 70px;
+    font-size: 25px;
     font-weight: bold;
 }
 
+/* 
 header nav a:hover {
     text-decoration: underline;
-}
+} */
 
 .container {
-    max-width: 1200px;
+    /* padding-top: 30px;   */
+    /* max-width: 1200px; */
     margin: auto;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 img {
@@ -39,12 +69,31 @@ footer {
     padding: 10px;
     background-color: #333;
     color: white;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
+
+#three {
+    position: relative; /* 자식 절대위치 기준 */
+}
+
+.org-title {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #333;
+    font-family: 'Noto Sans KR', sans-serif;
+    z-index: 10;
+    /* background: rgba(255, 255, 255, 0.8); 배경 약간 넣어서 글자가 더 잘 보이도록 */
+    padding: 50px 50px;
+    border-radius: 4px;
+}
+
 
 @media (max-width: 768px) {
     header nav a {
-        display: block;
-        margin: 10px 0;
+        /* display: block; */
+        margin: 0 15px;
     }
 }
